styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body.dark {
    @apply bg-[#121212] !text-[#fff];
  }
  body.dark button {
    @apply !text-[#fff];
  }
  body.dark .bg-dark,
  body.dark input {
    @apply !bg-[#121212];
  }
  body.dark .bg-black-child {
    @apply !bg-[#000];
  }
  body.dark .border-dark {
    @apply !border-[#121212];
  }
  body.dark .invert-dark {
    @apply invert;
  }
}
@layer components {
  .btn-primary {
    @apply bg-[#42A9E4] hover:bg-blue-500 w-full text-white p-2 rounded-md;
  }
  .hideIcons span {
    @apply hidden;
  }

  .menuitem {
    @apply flex items-center rounded-md gap-4 hover:bg-[#fafafad9] p-2 cursor-pointer w-full justify-center md:justify-start;
  }

  body.dark .menuitem {
    @apply hover:bg-[#312e2e];
  }

  .menuitem span {
    @apply text-[16px] font-normal;
  }

  .menuIcon {
    @apply w-6 h-6 cursor-pointer hover:bg-transparent;
  }
  .hasStory {
    @apply p-[2px] rounded-full  bg-gradient-to-r bg-gradient-to-r from-[#FFA600] via-[#F5007D] to-pink-500;
  }
  .basic-input {
    @apply border p-2 rounded placeholder:text-gray-500;
  }
  .divider {
    @apply bg-gray-400 h-[1px] w-full;
  }
  .menuButton {
    @apply bg-black-child py-2 px-5 flex items-center w-60 justify-between border-b border-[#E5E7EB]  hover:bg-[#e5e7eb];
  }
}

body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

